# ChangSoundDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hjp/mysound/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: jakey.m4a
app/src/main/cpp/: com_hjp_mysound_Utils.h  supersound.cpp
app/src/main/java/com/hjp/mysound/: MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/test/java/com/hjp/mysound/: ExampleUnitTest.java
